# spot-sync

./: .gitignore  README.md  config.py  cookie_extractor.py  cookies.txt  create_env_file.py  get_playlists.py  gui.py  initialization.py  main.py  pyproject.toml  requirements.txt  spotSync.code-workspace  wait_folder.py
.cursor/rules/: package-manager.mdc
