[project]
name = "spot-sync"
version = "0.1.0"
description = "Sync Spotify playlists locally"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "spotipy>=2.24.0",
    "spotdl>=4.2.8",
    "PySide6>=6.8.0.2",
    "browser-cookie3>=0.19.1",
]

[tool.uv.sources]
spotdl = { git = "https://github.com/temporaryna/spotify-downloader.git" }
